trustfall_derive/tests/ui/syntax_error.rs.broken
use trustfall_derive::TrustfallEnumVertex;

// Note the missing comma after the second variant.
#[derive(Debug, Clone, TrustfallEnumVertex)]
enum Vertex {
    User(String),
    Message { sender: String, content: String }
    EmptyVariant,
}

fn main() {}
